<resources>
    <string name="app_name">IhealthU</string>
    <string name="title_home">HOME</string>
    <string name="title_diet">DIET</string>
    <string name="title_exercise">EXERCISE</string>
    <string name="title_profile">MY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">LOG IN</string>
    <string name="back">BACK</string>
    <string name="reset">RESET</string>
    <string name="cancelBig">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="update">UPDATE</string>
    <string name="record">RECORD</string>
    <string name="calculate">CALCULATE</string>
    <string name="register">REGISTER</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="monday_full">Monday</string>
    <string name="tuesday_full">Tuesday</string>
    <string name="wednesday_full">Wednesday</string>
    <string name="thursday_full">Thursday</string>
    <string name="friday_full">Friday</string>
    <string name="saturday_full">Saturday</string>
    <string name="sunday_full">Sunday</string>
    <string name="search_plan">search plan</string>
    <string name="my_plan">my plan</string>
    <string name="history">History</string>
    <string name="create_new_plan">create new plan</string>
    <string name="description">Description:</string>
    <string name="plan_name">Plan name:</string>
    <string name="description_hint">write your description here</string>
    <string name="plan_hint">write your plan name here</string>
    <string name="create">create</string>
    <string name="cancel">cancel</string>
    <string name="search">search</string>
    <string name="import_txt">import</string>
    <string name="actor">Actor:</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="exercise">exercise:</string>
    <string name="your_input_here">your input here</string>
    <string name="time">time:</string>
    <string name="title_activity_login">Login</string>
    <string name="in_use">In use:</string>
    <string name="active_unactive">active/unactive</string>
    <string name="owner">owner:</string>
    <string name="today_exercise">today exercise</string>
    <string name="check">check</string>
</resources>