<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exercise.Create_exwed">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/dailye3_titile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/exercise"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dailye3_input"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/your_input_here"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/dailyt3_titile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/time"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dailyt3_input"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/your_input_here"
                android:inputType="text" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>